# vide

./: Cargo.toml  gen_debug_scene.rs
crates/scene_viewer/: Cargo.toml
crates/scene_viewer/src/: main.rs
glsl/: quad.frag
src/: offscreen_renderer.rs  renderer.rs  shaper.rs  winit_renderer.rs
src/default_drawables/: glyph.rs  quad.rs
src/drawable_reference/: atlas.rs  instance_buffer.rs
