[package]
name = "scene_viewer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vide = { path = "../.." }
futures = { workspace = true }
glamour = { workspace = true }
palette = { workspace = true }
winit = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
notify = { workspace = true }
parking_lot = "0.12.1"
rust-embed = { workspace = true }
env_logger = "0.10.0"
profiling = { version = "1.0.15", features = ["profile-with-tracy"] }
tracy-client = "=0.17.0"
rand = "0.8.5"
